src/objects/UnpaidInterns1__c.object
<CustomObject>
    <fields>
        <fullName>A10__c</fullName>
        <label>A10</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A11__c</fullName>
        <label>A11</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A12__c</fullName>
        <label>A12</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <label>ContactId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterviewDate__c</fullName>
        <label>InterviewDate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interviewer__c</fullName>
        <label>Interviewer</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberName__c</fullName>
        <label>MemberName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdatedDate__c</fullName>
        <label>UpdatedDate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated__c</fullName>
        <label>Updated</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>UnpaidInterns1</label>
    <nameField>
        <label>UnpaidInterns1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UnpaidInterns1</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>